--- a/css/theme/erin.css
+++ b/css/theme/erin.css
@@ -155,7 +155,8 @@ body {
 
 .reveal code {
   font-family: monospace;
-  text-transform: none; }
+  text-transform: none;
+  font-size: 0.5em; }
 
 .reveal pre code {
   display: block;
